--- a/BackFight/app/src/main/res/values/strings.xml
+++ b/BackFight/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="dummy_button">Dummy Button2</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="instructions">Zoom and move the board. Touch a square to select. Do a long touch to change the square color.</string>
 </resources>
