Added the possibility to join a game and host a game

--- a/BackFight/app/src/main/res/values/strings.xml
+++ b/BackFight/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="newGame_join">Join</string>
     <string name="lobby_startGame">Start Game</string>
     <string name="lobby_title">Lobby</string>
+    <string name="EXTRA_UUID">com.jarn.extra.uuid</string>
+    <string name="EXTRA_HOST">sa</string>
+    <string name="EXTRA_GRIDTYPE">s</string>
 </resources>
