--- a/BackFight/app/src/main/res/values/strings.xml
+++ b/BackFight/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="newGame_join">Join</string>
     <string name="lobby_startGame">Start Game</string>
     <string name="lobby_title">Lobby</string>
+    <string name="rules_search">Search rules</string>
+    <string name="rules_rulesDetails">Click on a rule to view the details</string>
+    <string name="all_icon">Icon</string>
 </resources>
