--- a/BackFight/app/src/main/res/values/strings.xml
+++ b/BackFight/app/src/main/res/values/strings.xml
@@ -42,4 +42,7 @@
     <string name="item_sword_flame_title">Drakur\'s flaming sword</string>
     <string name="item_sword_flame_description">Legends tell what this sword can do.</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
