--- a/WeatherAarhusgroup07/app/src/main/res/values/strings.xml
+++ b/WeatherAarhusgroup07/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Weather Aarhus group 07</string>
     <string name="action_settings">Settings</string>
+    <string name="current">Current:</string>
+    <string name="weather">weather</string>
+    <string name="NoWeatherInfo">There were no info</string>
+    <string name="PermissionNotGranted">Permission not granted</string>
+    <string name="NewWeatherinfoRecieved">New weather info recieved.</string>
 </resources>
