--- a/BackFight/app/src/main/res/values/strings.xml
+++ b/BackFight/app/src/main/res/values/strings.xml
@@ -13,15 +13,15 @@
     <string name="newGame_join">Join</string>
     <string name="lobby_startGame">Start Game</string>
     <string name="lobby_title">Lobby</string>
-    <string name="EXTRA_UUID">com.jarn.extra.uuid</string>
-    <string name="EXTRA_HOST">sa</string>
-    <string name="EXTRA_GRIDTYPE">s</string>
     <string name="rules_search">Search rules</string>
     <string name="rules_rulesDetails">Click on a rule to view the details</string>
     <string name="all_icon">Icon</string>
-    <string name="EXTRA_GRIDSIZE">com.jarn.extra.gridsize</string>
     <string name="lobby_default">Default</string>
     <string name="lobby_maze">Maze</string>
-    <string name="EXTRA_PLAYERLIST">com.jarn.extra.playerlist</string>
 
+    <string name="EXTRA_PLAYERLIST">com.jarn.extra.playerlist</string>
+    <string name="EXTRA_UUID">com.jarn.extra.uuid</string>
+    <string name="EXTRA_HOST">com.jarn.extra.host</string>
+    <string name="EXTRA_GRIDTYPE">com.jarn.extra.gridtype</string>
+    <string name="EXTRA_GRIDSIZE">com.jarn.extra.gridsize</string>
 </resources>
