--- a/BackFight/app/src/main/res/values/strings.xml
+++ b/BackFight/app/src/main/res/values/strings.xml
@@ -51,5 +51,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="game_actionCount">Action count left:</string>
+    <string name="game_roundCounter">Round count:</string>
 
 </resources>
