--- a/BackFight/app/src/main/res/values/strings.xml
+++ b/BackFight/app/src/main/res/values/strings.xml
@@ -85,6 +85,10 @@
     <string name="dmg">Dmg</string>
     <string name="hp">Hp</string>
     <string name="name">Name</string>
+    <string name="internetErrorMessage">You need a network connection to use this application. Please turn on mobile network or Wi-Fi in Settings.</string>
+    <string name="internetErrorTitle">Unable to connect</string>
+    <string name="internetErrorSettings">Settings</string>
+    <string name="internetErrorCancel">Cancel</string>
 
 
 </resources>
