--- a/Report/docs/arbejdsfordeling.tex
+++ b/Report/docs/arbejdsfordeling.tex
@@ -1,4 +1,46 @@
 \pagestyle{Uni}
 
-\chapter{Ansvarsområder}
-	Her beskrives ansvarsområderne.
+\chapter{Work plan}
+In the following work plan is based on our task board and pull request through out the project. Each item on the work plan varies in size.
+
+\begin{itemize}
+	\item Anders Meidahl
+	\begin{itemize}
+		\item Setup initial board with pan and zoom and generation of maps
+		\item Setup database with Firebase
+		\item Create the join/spectator functionalities
+		\item Create the lobby functionalities
+		\item Resize objects
+		\item Turn based
+		\item Create service for notifications
+		\item Create fog on board
+	\end{itemize}
+	
+	\item Jakob
+	\begin{itemize}
+		\item Create fragments for players/monsters state and items
+		\item Create items
+		\item Combat system
+		\item Change the board generation to use strategy pattern
+		\item Player can pick up items
+		\item Make test for connection
+		\item Fill data into fragments
+	\end{itemize}
+	\item Nicklas
+	\begin{itemize}
+		\item Select object on the board
+		\item Create movement functionalities
+		\item Re-factor the panning zooming
+		\item Fix the zoom length.
+		\item Translate application to danish
+	\end{itemize}
+	\item Rasmus
+	\begin{itemize}
+		\item Build up the Menus
+		\item Monsters
+		\item Set up the settings, rules and credits activities
+		\item Make the tablet mode
+		\item Make splash screen
+		\item Animations
+	\end{itemize}
+\end{itemize}
