Made work plan and started on reuirementsSpecification

--- a/Report/docs/forside.tex
+++ b/Report/docs/forside.tex
@@ -14,10 +14,10 @@
 		\begin{minipage}{0.4\textwidth}
 			\begin{flushleft} \large
 				
-				\emph{Forfattere:}\\ 
+				\emph{Authors:}\\ 
 				
 				201404709 \textsc{Jakob Laursen Vork}\\
-				012345678 \textsc{Someone}\\
+				201404246 \textsc{Anders Meidahl Münsberg}\\
 				012345678 \textsc{Someone}\\
 				012345678 \textsc{Someone}\\
 				
