--- a/Report/Master.tex
+++ b/Report/Master.tex
@@ -13,6 +13,7 @@
 \renewcommand{\baselinestretch}{1.1}\normalsize
 
 \include{docs/arbejdsfordeling}
+\include{docs/RequirementsSpecification}
 
 %\startcontents[dokumentation]
 %\renewcommand{\baselinestretch}{0.75}\normalsize
