--- a/Report/Master.tex
+++ b/Report/Master.tex
@@ -12,8 +12,9 @@
 \printcontents[rapport]{ }{0}{\chapter*{Indholdsfortegnelse}}
 \renewcommand{\baselinestretch}{1.1}\normalsize
 
-\include{docs/arbejdsfordeling}
 \include{docs/RequirementsSpecification}
+\include{docs/ChosenDesign}
+\include{docs/arbejdsfordeling}
 
 %\startcontents[dokumentation]
 %\renewcommand{\baselinestretch}{0.75}\normalsize
