changed label on images

--- a/Report/docs/RequirementsSpecification.tex
+++ b/Report/docs/RequirementsSpecification.tex
@@ -24,12 +24,12 @@ This section will show the ideas about how the application was supposed to look 
 \begin{figure}[ht!]
 	\centering
 	\includegraphics[width=90mm]{images/Gui.png}
-	\caption{Menu navigation \label{overflow}}
+	\caption{Menu navigation \label{navigation}}
 \end{figure}
 
 \begin{figure}[ht!]
 	\centering
 	\includegraphics[width=90mm]{images/GameView.png}
-	\caption{Game layout \label{Test}}
+	\caption{Game layout \label{layout}}
 \end{figure}
 
