--- a/BackFight/app/src/main/res/values-da/strings.xml
+++ b/BackFight/app/src/main/res/values-da/strings.xml
@@ -34,7 +34,6 @@
     <string name="mainMenu_dialogMessage">Hvad er dit profil navn?</string>
     <string name="mainMenu_dialogTitle">Profil navn</string>
     <string name="mainMenu_exit">Exit</string>
-    <string name="mainMenu_loadGame">Indlæs Spil</string>
     <string name="mainMenu_newGame">Nyt Spil</string>
     <string name="mainMenu_rules">Regler</string>
     <string name="mainMenu_settings">Indstillinger</string>
@@ -63,7 +62,6 @@
     <string name="newGame_dialogMessage">Insæt vært ID</string>
     <string name="newGame_dialogTitle">Nylig brugte ID</string>
     <string name="newGame_join">Deltag i spil</string>
-    <string name="newGame_load">Indlæs</string>
     <string name="rules_rulesDetails">For detaljer, klik på en regl.</string>
     <string name="all_back">Tilbage</string>
     <string name="all_icon">Ikon</string>
@@ -76,4 +74,15 @@
     <string name="EXTRA_HOST">com.jarn.extra.host</string>
     <string name="EXTRA_PLAYERLIST">com.jarn.extra.playerlist</string>
     <string name="EXTRA_UUID">com.jarn.extra.uuid</string>
+    <string name="mainMenu_spectateGame">Overvåg spil</string>
+    <string name="mainMenu_dialogSpectateBtnPositive">Overvåg spil</string>
+    <string name="internetErrorCancel">Cancel</string>
+    <string name="internetErrorMessage">Applikationen har brug for netværk. Venligst tænd for netværket i indstillinger.</string>
+    <string name="internetErrorSettings">Indstillinger</string>
+    <string name="internetErrorTitle">Fejl i forbindelsen</string>
+    <string name="all_dialogSpectateTitle">Overvåg</string>
+    <string name="EXTRA_SPECTATE">com.jarn.extra.spectate</string>
+    <string name="fragment_item_details_description">Beskrivelse</string>
+    <string name="fragment_item_details_stats">Stats</string>
+    <string name="fragment_item_details_title">Titel</string>
 </resources>
