--- a/Report/docs/arbejdsfordeling.tex
+++ b/Report/docs/arbejdsfordeling.tex
@@ -6,33 +6,25 @@ In the following work plan is based on our task board and pull request through o
 \begin{itemize}
 	\item Anders Meidahl
 	\begin{itemize}
-		\item Setup initial board with pan and zoom and generation of maps
+		\item Board with pan and zoom 
+		\item Generation of maps and fog
 		\item Setup database with Firebase
-		\item Create the join/spectator functionalities
-		\item Create the lobby functionalities
-		\item Resize objects
-		\item Turn based
+		\item Create the join/spectator/lobby functionalities
 		\item Create service for notifications
-		\item Create fog on board
 	\end{itemize}
 	
 	\item Jakob
 	\begin{itemize}
 		\item Create fragments for players/monsters state and items
-		\item Create items
+		\item Create items and item system
 		\item Combat system
-		\item Change the board generation to use strategy pattern
-		\item Player can pick up items
-		\item Make test for connection
-		\item Fill data into fragments
 	\end{itemize}
 	\item Nicklas
 	\begin{itemize}
 		\item Select object on the board
 		\item Create movement functionalities
-		\item Re-factor the panning zooming
-		\item Fix the zoom length.
-		\item Translate application to danish
+		\item Re-factor the panning and zooming
+		\item Translator
 	\end{itemize}
 	\item Rasmus
 	\begin{itemize}
@@ -40,7 +32,5 @@ In the following work plan is based on our task board and pull request through o
 		\item Monsters
 		\item Setup the settings, rules and credits activities
 		\item Make the tablet mode
-		\item Make splash screen
-		\item Animations
 	\end{itemize}
 \end{itemize}
