--- a/Report/docs/RequirementsSpecification.tex
+++ b/Report/docs/RequirementsSpecification.tex
@@ -2,6 +2,53 @@
 
 \chapter{Requirements specification}
 
+\section{User Stories}
+\textbf{Menu:}
+	\begin{itemize}
+		\item As a User, I can create a game
+		\begin{itemize}
+			\item As a User, I can change the size of the board when creating a game
+			\item As a User, I can change the map type of the board when creating a game
+		\end{itemize}
+		\item As a User, I can join a game
+		\item As a User, I can spectate a game
+		\item As a User, I can change my personal settings
+		\begin{itemize}
+			\item As a User, I can change my name
+			\item As a User, I can change my avatar
+		\end{itemize}
+		\item As a User, I can read the rules
+		\begin{itemize}
+			\item As a User, I can search the rules
+		\end{itemize}
+	\end{itemize}
+
+	\textbf{In-game:}
+	\begin{itemize}	
+		
+		\item As a User, I can take an action
+		\begin{itemize}
+			\item As a User, I can move a space
+			\item As a User, I can attack a monster
+		\end{itemize}
+		
+		\item As a User, I can see stats
+		\begin{itemize}
+			\item As a User, I can see my stats
+			\item As a User, I can see other players stats
+			\item As a User, I can see monster stats
+		\end{itemize}
+		\item As a User, I have vision
+		\begin{itemize}
+			\item As a User, I can see the tiles in range around me and other players and if there is a item/monster placed on them.
+			\item As a User, I can see the what kind of tile a tile holds if I or another player have passed it earlier on but no longer is in range of it.
+			\item As a User, I can't see tiles that I or another player have not yet been in range of.
+		\end{itemize}
+	\end{itemize}
+
+\section{Non-functional requirements}
+
+
 \section{Vision}
 	The vision with the project is to make a social game that is played as co-op so that a fellow-felling is created.  The game is intended for physical attendance where each player has their own android device. However, it is also possible to play online with friends, since all communication is intended to be happening over the Internet. In the following sections there are various Personans and scenarios that will try to give an impression on how a product like the one to be developed could be used.
 
