Added Chosen design with firebase

--- a/Report/docs/RequirementsSpecification.tex
+++ b/Report/docs/RequirementsSpecification.tex
@@ -68,15 +68,20 @@ It is Friday evening and Lærke can not afford to go out to town. Instead, she o
 \section{User interface design}
 This section will show the ideas about how the application was supposed to look and feel when the design was made in the very start of the project.
 
-\begin{figure}[ht!]
+On \ref{navigation} we see the flow from the main menu and how to create a game and start it.
+
+\begin{figure}
 	\centering
-	\includegraphics[width=90mm]{images/Gui.png}
+	\includegraphics[width=130mm]{images/Gui.png}
 	\caption{Menu navigation \label{navigation}}
 \end{figure}
 
-\begin{figure}[ht!]
+
+On \ref{gameLayout} the game view is seen as it was original planed it has been changed a bit under development but the idea of using tiles and players is still the same. There has been added some text to describe rounds and actions left.
+
+\begin{figure}
 	\centering
-	\includegraphics[width=90mm]{images/GameView.png}
-	\caption{Game layout \label{layout}}
+	\includegraphics[width=130mm]{images/GameView.png}
+	\caption{Game layout \label{gameLayout}}
 \end{figure}
 
