--- a/Report/docs/forside.tex
+++ b/Report/docs/forside.tex
@@ -17,7 +17,7 @@
 				\emph{Forfattere:}\\ 
 				
 				201404709 \textsc{Jakob Laursen Vork}\\
-				012345678 \textsc{Someone}\\
+				201370286 \textsc{Nicklas Nielsen}\\
 				012345678 \textsc{Someone}\\
 				012345678 \textsc{Someone}\\
 				
