--- a/BackFight/app/src/main/res/values-da/strings.xml
+++ b/BackFight/app/src/main/res/values-da/strings.xml
@@ -11,20 +11,20 @@
     <string name="hp">Hp</string>
     <string name="dmg">Dmg</string>
     <string name="item_axe_description">Intet træ eller monster kan stoppe dig nu.</string>
-    <string name="item_axe_major_description">Denne økse var brugt af Lionheart ham selv, i kampen om Jaffa.</string>
+    <string name="item_axe_major_description">Denne økse blev brugt i Kampen Om Jaffa af Lionheart ham selv.</string>
     <string name="item_axe_major_title">Lionheart\'s stridsøkse</string>
-    <string name="item_axe_title">stridsøkse</string>
-    <string name="item_scepter_description">Den er måske kongelig, men den er ikke effektiv.</string>
+    <string name="item_axe_title">Stridsøkse</string>
+    <string name="item_scepter_description">Den er måske kongelig, men det vil ikke redde dig</string>
     <string name="item_scepter_title">Scepter</string>
     <string name="item_sword_dual_description">Jo flere jo bedre!</string>
-    <string name="item_sword_dual_title">Dobbelt svært</string>
+    <string name="item_sword_dual_title">Dobbelt sværd</string>
     <string name="item_sword_flame_description">Legenden fortæller hvad dette sværd kan.</string>
     <string name="item_sword_flame_title">Drakur\'s flammende sværd</string>
     <string name="item_sword_magical_description">Sværdet af Al Samit er smedet i elevernes slot. Det besider dele af den mægtige drage Phlamir.</string>
     <string name="item_sword_magical_title">Al Samirs Sværd</string>
     <string name="item_sword_scimitar_description">Stjålet fra en tilfældig person.. Nu mangler jeg bare at stjæle hans kamel</string>
     <string name="item_sword_scimitar_title">Købmand Scimitar</string>
-    <string name="item_sword_simple_description">Det er ikke meget, men bare slå med den spidse ende.</string>
+    <string name="item_sword_simple_description">Det er ikke meget, men bare stik med den spidse ende.</string>
     <string name="item_sword_simple_title">Simpelt sværd</string>
     <string name="lobby_default">Standard</string>
     <string name="lobby_maze">Labyrint</string>
@@ -33,7 +33,7 @@
     <string name="mainMenu_dialogBtnPositive">OK</string>
     <string name="mainMenu_dialogMessage">Hvad er dit profil navn?</string>
     <string name="mainMenu_dialogTitle">Profil navn</string>
-    <string name="mainMenu_exit">Exit</string>
+    <string name="mainMenu_exit">Afslut</string>
     <string name="mainMenu_newGame">Nyt Spil</string>
     <string name="mainMenu_rules">Regler</string>
     <string name="mainMenu_settings">Indstillinger</string>
@@ -80,9 +80,13 @@
     <string name="internetErrorMessage">Applikationen har brug for netværk. Venligst tænd for netværket i indstillinger.</string>
     <string name="internetErrorSettings">Indstillinger</string>
     <string name="internetErrorTitle">Fejl i forbindelsen</string>
-    <string name="all_dialogSpectateTitle">Overvåg</string>
+    <string name="all_dialogSpectateTitle">Se på</string>
     <string name="EXTRA_SPECTATE">com.jarn.extra.spectate</string>
     <string name="fragment_item_details_description">Beskrivelse</string>
     <string name="fragment_item_details_stats">Stats</string>
     <string name="fragment_item_details_title">Titel</string>
+    <string name="monster">Monster</string>
+    <string name="monster_turn">Monsternes tur</string>
+    <string name="newRound">Ny runde</string>
+    <string name="newRoundStarted">En ny runde er startet, husk at tage din tur</string>
 </resources>
