--- a/Report/docs/RequirementsSpecification.tex
+++ b/Report/docs/RequirementsSpecification.tex
@@ -46,8 +46,6 @@
 		\end{itemize}
 	\end{itemize}
 
-\section{Non-functional requirements}
-
 
 \section{Vision}
 	The vision with the project is to make a social game that is played as co-op so that a fellow-felling is created.  The game is intended for physical attendance where each player has their own android device. However, it is also possible to play online with friends, since all communication is intended to be happening over the Internet. In the following sections there are various Personans and scenarios that will try to give an impression on how a product like the one to be developed could be used.
@@ -66,7 +64,7 @@ It is Thursday evening and Christian has taken his board game under his arm, lik
 It is Friday evening and Lærke can not afford to go out to town. Instead, she opens her tablet and finds the "Play store" to find a new co-op game she can play with her Danish friends. She finds the game "BackFight". Lærke writes to her Danish friends if they want to play with her. They quickly download the game and start a game. Time flies away and they are doing their second game, unfortunately, they have to stop when one of them need to wake up early the next day. The following day, they all want to continue the game. They open the app and choose their game from the day before and can continue from where they stopped.
 
 \section{User interface design}
-This section will show the ideas about how the application was supposed to look and feel when the design was made in the very start of the project.
+This section will show the ideas about how the application was supposed to look and feel when the design was made in the very begin of the project.
 
 On \ref{navigation} we see the flow from the main menu and how to create a game and start it.
 
