Corrected changes requested from pull request

--- a/BackFight/app/src/main/res/values-da/strings.xml
+++ b/BackFight/app/src/main/res/values-da/strings.xml
@@ -45,7 +45,7 @@
     <string name="monster_mauler_name">Mauler</string>
     <string name="monster_muler_description">Var engang dansemester, prøv med en danse kamp.</string>
     <string name="monster_muler_name">Muler</string>
-    <string name="monster_tauler_description">Den skinner ikke, men det er stadig en varmpyr.</string>
+    <string name="monster_tauler_description">Den skinner ikke, men det er stadig en vampyr.</string>
     <string name="monster_tauler_name">Tauler</string>
     <string name="monster_threeHeaded_description">Synes du 2 hoveder er meget at håndtere, forstil dig 3 hoveder.</string>
     <string name="monster_threeHeaded_name">3 Hovdet</string>
