--- a/Report/docs/ChosenDesign.tex
+++ b/Report/docs/ChosenDesign.tex
@@ -2,15 +2,5 @@
 
 \chapter{Chosen design}
 
-\section{Firebase}
-Firebase is a realtime database, everything is stored as JSON and synchronized in realtime to every connected phone\footnote{https://firebase.google.com/docs/database/}.
+\input{ChosenDesign/Firebase}
 
-The reason for choosing Firebase over any other database was the fast setup, where we in a very short time could setup a database that could fit our needs so we could sync between multiple clients playing a co-op game. Firebase is used for everything the requires synchronization between devices and works for controlling the state.
-
-The use of Firebase in Backfight is described in the following:
-Firebase is used for holding game state information to control our game from server side:
-The Grid, this is created when a host presses create, it is then distributed to all the users that have joined, this is not changed again unless the host recreates on the same id.
-The game state is defined by 3 different lists, the player list, the monster list and the item list that together defines what state the game is in. These 3 lists can be changed by all users when they move, attack or pick up items, each of these lists would then change to reflect the action. This allows the other users to see the action on their local device. 
-There is also a Round count to see what round the game is in, this can be used to control difficulty of monsters and events. There is also a shadowed list that holds all the tiles that have been in range of a player that should be shadowed for players unless someone is in range.
-
-There are also lists for the lobby state, since when the host changes settings or start the game these should be reflected on the joined devices.
