--- a/Report/Master.tex
+++ b/Report/Master.tex
@@ -14,6 +14,8 @@
 
 \include{docs/arbejdsfordeling}
 
+\include{docs/features/features}
+
 %\startcontents[dokumentation]
 %\renewcommand{\baselinestretch}{0.75}\normalsize
 %\printcontents[dokumentation]{ }{0}{\chapter*{Indholdsfortegnelse}}
