--- a/Report/docs/features/subfeatures/itemsAndMonsters.tex
+++ b/Report/docs/features/subfeatures/itemsAndMonsters.tex
@@ -3,3 +3,7 @@
 Items and monsters works in many way the same even though monsters also share some common traits with the player class.
 Both monsters and items has a title/name, description etc. (See )
 
+\begin{figure}[ht!]
+	\centering
+	\includegraphics[width=130mm]{images/FrontpageImage.png}
+\end{figure}
