Added diagrams for movement

--- a/Report/Master.tex
+++ b/Report/Master.tex
@@ -14,6 +14,9 @@
 
 \include{docs/RequirementsSpecification}
 \include{docs/ChosenDesign}
+
+\include{docs/Diagrams}
+
 \include{docs/Intro}
 \include{docs/arbejdsfordeling}
 
