Changed tile and structure from diagram to architecture

--- a/Report/Master.tex
+++ b/Report/Master.tex
@@ -15,7 +15,7 @@
 \include{docs/RequirementsSpecification}
 \include{docs/ChosenDesign}
 
-\include{docs/Diagrams}
+\include{docs/Architecture}
 
 \include{docs/Intro}
 \include{docs/arbejdsfordeling}
