Reworked the Intro

--- a/Report/docs/Intro.tex
+++ b/Report/docs/Intro.tex
@@ -3,5 +3,4 @@
 \chapter{Intro}
 The application created for the ITSMAP final project is a multiplayer co-op game for 1-4 players playing against the app itself. The players are going to slay monsters to escape a horrible dungeon with a terrifying boss at the end. Players can pick up items to  become strong enough to defeat the monsters and the final boss as they move through out the dungeon.
 
-To give the players the experience of playing on the same board the application uses Firebase as a database. Firebase is a real time database which synchronizes information out to the users when a changes happens hence giving the feeling of playing on the same board.
-
+The application is developed to the extend that players can create and join the game. The application will synchronize information between players giving the experience of playing on the same board. At the moment there is no end to the game, so if all players die the game does not exit or when the final boss is defeated the game still continues.
