--- a/Report/Architecture/ClassDiagram.tex
+++ b/Report/Architecture/ClassDiagram.tex
@@ -1,6 +1,6 @@
 \section{Class Diagram for movement}
 
-On \ref{ClassDiagramMovement} the simplified class diagram is shown. This shows how moving a player work. The central part of the diagram is the GameView which is holding the game state lists. These lists control where players, monsters and items are on the map. Each class displayed holds a greater number of functions and attributes but they have been cleared for simplicity, showing the relevant things for movement.
+On \ref{ClassDiagramMovement} the simplified class diagram is shown. This shows how moving a player works. The central part of the diagram is the GameView which is holding the game state lists. These lists control where players, monsters and items are on the map. Each class displayed holds a greater number of functions and attributes but they have been cleared for simplicity, showing only the relevant things for movement and general understanding.
 
 
 \begin{figure}
