--- a/Report/docs/KnownBugs.tex
+++ b/Report/docs/KnownBugs.tex
@@ -22,4 +22,16 @@
 	\end{itemize}
 	In Backfight the game state lists can be changed by multiple users at the same time. To solve this problem either the game could be changed to be round based so each the each user would have a turn. Another solution would be to make some server side logic that would take the changed elements and then handle the synchronization with the database.
 	
+	\item \textbf{Losing action:} If a player clicks a wall they will lose an action even tho they can't move there. This is a method call takeAction that is placed after the movePlayer instead of inside.
+	
+	Language error with dansih and english
+	\item \textbf{Language error:} The language of the items and monsters will be decided by the language settings of the player hosting the game. This is because all the items/monsters are uploaded to the database as strings. This can be fixed by using id's for the items instead so it just pulls the strings from the local system.
+	
+	\item \textbf{Boss Monsters:} The Boss Monster will only show up on the last player to take the turn in round 10 and not for all players. This is because only the last player will have the object and thereby have the coordinates. This can be fixed by adding a field to the Monster class describing the class of the monster. It would then be possible to just look in the list for a monster with the class of Boss and then show this.
+	
+	Boos monster is only highlighter for the player taking round 10
+	
+	%TODO add ref to future improvments
+	
+	
 \end{enumerate}
