--- a/Report/docs/Intro.tex
+++ b/Report/docs/Intro.tex
@@ -1,6 +1,6 @@
 \pagestyle{Uni}
 
 \chapter{Intro}
-The application created for the ITSMAP final project is a multiplayer co-op game for 1-4 players playing against the app itself. The players are going to slay monsters to escape a horrible dungeon with a terrifying boss at the end. Players can pick up items to  become strong enough to defeat the monsters and the final boss as they move through out the dungeon.
+BackFight is a multiplayer co-op game for 1-4 players. The players are going to slay monsters to escape a horrible dungeon with a terrifying boss at the end. 
 
-The application is developed to the extend that players can create and join the game. The application will synchronize information between players giving the experience of playing on the same board. At the moment there is no end to the game, so if all players die the game does not exit or when the final boss is defeated the game still continues.
+Choose between two awesome kinds of maps, the amazing maze that people never escape or the horrifying dungeon. Every map is haunted by more than 10 different kind of monsters trying to slay you. Fight of the evil creatures with legendary items found scattered around the dungeon.
