Made som changes based on review.

--- a/Report/docs/features/features.tex
+++ b/Report/docs/features/features.tex
@@ -1,5 +1,7 @@
 \chapter{Features}
 
+Backfight consist of different features - each contributing to a better experience for the user. In this chapter some of the most important features will briefly be described.
+
 \input{docs/features/subfeatures/Firebase}
 
 \input{docs/features/subfeatures/itemsAndMonsters}
