--- a/Report/docs/features/subfeatures/itemsAndMonsters.tex
+++ b/Report/docs/features/subfeatures/itemsAndMonsters.tex
@@ -10,7 +10,7 @@ Both monsters and items has a title/name, description etc.
 	\label{fig:itemsAndMonstersDiagram}
 \end{figure}
 
-In the first version of the game neither Monster nor GameItem had Coordinate as a property. Instead it was a list of tuples. The tuples consisted of a monster or game item and a coordinate. It however turned out to be quite difficult to work with, since one had to loop through the list of tuples quite a lot just to get the right monster. It also made it difficult to update the gamestate, due to these looping and parsing of tuples in methods instead of the monster or game item object. Therefore we changed it to the design shown on figure \ref{fig:itemsAndMonstersDiagram}. When an item is picked up by the player the Coordinate is just null. \\
+In the first version of the game neither Monster nor GameItem had Coordinate as a property. Instead it was a list of tuples. The tuples consisted of a monster or game item and a coordinate. It however turned out to be quite difficult to work with, since one had to loop through the list of tuples quite a lot just to get the right monster. It also made it difficult to update the game state, due to these looping and parsing of tuples in methods instead of the monster or game item object. Therefore we changed it to the design shown on figure \ref{fig:itemsAndMonstersDiagram}. When a player picks up an item the coordinate property of that item is than set to null. \\
 
 \subsection{Factories}
-Both items and monsters are created via a factory. When creating a monster or item, the gameview request a random item or monster. Currently items are totally randomized and monsters are seperated into class'. See "Future Improvements" for more information about future ideas and improvements.
+Both items and monsters are created via a factory. When creating a monster or item, the gameview request a random item or monster. Currently items are totally randomized and monsters are separated into class'. See "Future Improvements" for more information about future ideas and improvements.
