--- a/Report/Master.tex
+++ b/Report/Master.tex
@@ -16,7 +16,7 @@
 \include{docs/RequirementsSpecification}
 \include{docs/ChosenDesign}
 \include{docs/arbejdsfordeling}
-
+\include{docs/improvements}
 %\startcontents[dokumentation]
 %\renewcommand{\baselinestretch}{0.75}\normalsize
 %\printcontents[dokumentation]{ }{0}{\chapter*{Indholdsfortegnelse}}
