--- a/Report/Master.tex
+++ b/Report/Master.tex
@@ -16,6 +16,7 @@
 \include{docs/RequirementsSpecification}
 \include{docs/ChosenDesign}
 \include{docs/arbejdsfordeling}
+\include{docs/Conclusion}
 
 %\startcontents[dokumentation]
 %\renewcommand{\baselinestretch}{0.75}\normalsize
