Fixed master after merge

--- a/Report/Master.tex
+++ b/Report/Master.tex
@@ -18,6 +18,8 @@
 
 \include{docs/arbejdsfordeling}
 
+\include{docs/Architecture}
+
 \include{docs/features/features}
 
 %\startcontents[dokumentation]
