--- a/Report/Architecture/ClassDiagram.tex
+++ b/Report/Architecture/ClassDiagram.tex
@@ -5,6 +5,6 @@ On \ref{ClassDiagramMovement} the simplified class diagram is shown it shows how
 
 \begin{figure}
 	\centering
-	\includegraphics[width=130mm]{images/ClassDiagramMovement.PNG}
+	\includegraphics[width=0.8\textwidth]{images/ClassDiagramMovement.PNG}
 	\caption{Class Diagram for movement of player \label{ClassDiagramMovement}}
 \end{figure}
