--- a/Report/Requirements/UserInterfaceDesign.tex
+++ b/Report/Requirements/UserInterfaceDesign.tex
@@ -5,7 +5,7 @@ On \ref{navigation} we see the flow from the main menu and how to create a game 
 
 \begin{figure}
 	\centering
-	\includegraphics[width=130mm]{images/Gui.png}
+	\includegraphics[width=0.8\textwidth]{images/Gui.png}
 	\caption{Menu navigation \label{navigation}}
 \end{figure}
 
@@ -14,6 +14,6 @@ On \ref{gameLayout} the game view is seen as it was original planed it has been 
 
 \begin{figure}
 	\centering
-	\includegraphics[width=130mm]{images/GameView.png}
+	\includegraphics[width=0.8\textwidth]{images/GameView.png}
 	\caption{Game layout \label{gameLayout}}
 \end{figure}
