Started on the PanZoomView description

--- a/Report/docs/features/features.tex
+++ b/Report/docs/features/features.tex
@@ -5,3 +5,5 @@ Backfight consist of different features - each contributing to a better experien
 \input{docs/features/subfeatures/Firebase}
 
 \input{docs/features/subfeatures/itemsAndMonsters}
+
+\input{docs/features/subfeatures/PanZoom}
